cleans up text further

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Stellar by HTML5 UP</title>
+		<title>KiwiLander</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1>Kiwilander</h1>
+						<h1>KiwiLander</h1>
 					</header>
 
 				<!-- Nav -->
@@ -39,15 +39,15 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>The Kiwilander Format</h2>
+											<h2>The KiwiLander Format</h2>
 										</header>
+										
+										<p>In the tradition of the <a href="https://7ph.com.au/">Australian</a> and <a href="https://www.canadianhighlander.ca/">Canadian Highlander</a> formats, KiwiLander is our new community designed local casual singleton format.
 
-										<li>Your deck must consist of at least 60 cards, with no sideboard.</li>
-										<li>Your deck must contain no more than a total of 5 points.</li>
-										<li>After game 1, present your deck to your opponent for a points check.</li>
-										<li>All cards <a href="https://magic.wizards.com/en/banned-restricted-list#vintage-banned">not legal for vintage play</a> are banned.</li>
-										<li>Additionally, all cards on the official <a href="https://magic.wizards.com/en/news/announcements/official-reprint-policy">reserved list</a> are banned.</li>
-										<li>Decks may contain no cards with the same name except for basic lands, or cards that explicitly state otherwise (e.g. <a href="https://scryfall.com/card/a25/105/relentless-rats">Relentless Rats</a>).</li>
+										KiwiLander decks consist of 60 cards with unique names (excluding basic lands) and are played in a classic one-on-one match of knock-down drag-out Magic the Gathering with no sideboard. All vintage <a href="https://magic.wizards.com/en/banned-restricted-list#vintage-banned">legal cards</a> excluding those on the <b><a href="https://magic.wizards.com/en/news/announcements/official-reprint-policy">reserved list</a></b> are fair game, but with a twist: a handful of powerful cards are assigned a value on our points list. 
+
+										<br><br>Each deck has a 5 point limit - so choose wisely!
+
 		
 									</div>
 									<!-- <span class="image"><img src="images/pic01.jpg" alt="" /></span> -->
