points list update for april 2023

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<section id="points" class="main special">
 								<header class="major">
 									<h2>Pointed Cards</h2>
-									<h3>Last updated: 03 December 2022</h3> 
+									<h3>Last updated: 04 April 2023</h3> 
 									<h5><i>Cards on the <a href="https://magic.wizards.com/en/news/announcements/official-reprint-policy">reserved list</a> are banned.</i></h5>
 								</header>
 
@@ -66,21 +66,20 @@
 									<li>
 										<h1>3 points</h1>
 										<br><a href="https://scryfall.com/card/a25/57/flash">Flash</a>
-										<br><a href="https://scryfall.com/card/dmc/190/sol-ring">Sol ring</a>
 										<br><a href="https://scryfall.com/card/thb/73/thassas-oracle">Thassa's Oracle</a>
 									</li>
 									<li>
 										<h1>2 points</h1>
-										<br><a href="https://scryfall.com/card/uma/93/demonic-tutor">Demonic tutor</a>
+										<br><a href="https://scryfall.com/card/uma/93/demonic-tutor">Demonic Tutor</a>
 										<br><a href="https://scryfall.com/card/2xm/270/mana-crypt">Mana Crypt</a>
+                    <br><a href="https://scryfall.com/card/dmc/190/sol-ring">Sol Ring</a>
 										<br><a href="https://scryfall.com/card/vma/316/strip-mine">Strip Mine</a>
 										<br><a href="https://scryfall.com/card/ulg/45/tinker">Tinker</a>
-										<br><a href="https://scryfall.com/card/cmr/156/vampiric-tutor">Vampiric tutor</a>
+										<br><a href="https://scryfall.com/card/cmr/156/vampiric-tutor">Vampiric Tutor</a>
 									</li>
 									<li>
 										<h1>1 point</h1>
 										<br><a href="https://scryfall.com/card/uma/236/ancient-tomb">Ancient Tomb</a>
-										<br><a href="https://scryfall.com/card/ema/2/balance">Balance</a>
 										<br><a href="https://scryfall.com/card/nph/104/birthing-pod">Birthing Pod</a>
 										<br><a href="https://scryfall.com/card/ima/157/channel">Channel</a>
 										<br><a href="https://scryfall.com/card/2xm/161/crop-rotation">Crop Rotation</a>
@@ -90,17 +89,19 @@
 										<br><a href="https://scryfall.com/card/phed/49/gamble">Gamble</a>
 										<br><a href="https://scryfall.com/card/2x2/51/gifts-ungiven">Gifts Ungiven</a>
 										<br><a href="https://scryfall.com/card/2x2/150/green-suns-zenith">Green Sun's Zenith</a>
-										<br><a href="https://scryfall.com/card/2x2/79/imperial-seal">Imperial seal</a>
-										<br><a href="https://scryfall.com/card/2x2/57/mana-drain">Mana drain</a>
+										<br><a href="https://scryfall.com/card/2x2/79/imperial-seal">Imperial Seal</a>
+										<br><a href="https://scryfall.com/card/2x2/57/mana-drain">Mana Drain</a>
 										<br><a href="https://scryfall.com/card/2x2/308/mana-vault">Mana Vault</a>
 										<br><a href="https://scryfall.com/card/8ed/91/merchant-scroll">Merchant Scroll</a>
 										<br><a href="https://scryfall.com/card/ema/62/mystical-tutor">Mystical Tutor</a>
 										<br><a href="https://scryfall.com/card/ema/177/natural-order">Natural Order</a>
+                    <br><a href="https://scryfall.com/card/eld/197/oko-thief-of-crowns">Oko, Thief of Crowns</a>
 										<br><a href="https://scryfall.com/card/2x2/314/senseis-divining-top">Sensei's Divining Top</a>
-										<br><a href="https://scryfall.com/card/cc1/5/sylvan-library">Sylvan library</a>
+										<br><a href="https://scryfall.com/card/cc1/5/sylvan-library">Sylvan Library</a>
 										<br><a href="https://scryfall.com/card/ncc/237/treasure-cruise">Treasure Cruise</a>
+                    <br><a href="https://scryfall.com/card/bbd/136/true-name-nemesis">True-Name Nemesis</a>
 										<br><a href="https://scryfall.com/card/bok/163/umezawas-jitte">Umezawa's Jitte</a>
-										<br><a href="https://scryfall.com/card/thb/161/underworld-breach">Underworld breach</a>
+										<br><a href="https://scryfall.com/card/thb/161/underworld-breach">Underworld Breach</a>
 										<br><a href="https://scryfall.com/card/mh2/259/urzas-saga">Urza's Saga</a>
 										<br><a href="https://scryfall.com/card/ema/248/wasteland">Wasteland</a>
 									</li>
