adds a point history page

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<section id="points" class="main special">
 								<header class="major">
 									<h2>Pointed Cards</h2>
-									<h3>Last updated: 04 April 2023</h3> 
+									<h3><a href="pointshistory.html">Last updated: 23 April 2023</a></h3>
 									<h5><i>Cards on the <a href="https://magic.wizards.com/en/news/announcements/official-reprint-policy">reserved list</a> are banned.</i></h5>
 								</header>
 
@@ -72,7 +72,7 @@
 										<h1>2 points</h1>
 										<br><a href="https://scryfall.com/card/uma/93/demonic-tutor">Demonic Tutor</a>
 										<br><a href="https://scryfall.com/card/2xm/270/mana-crypt">Mana Crypt</a>
-                    <br><a href="https://scryfall.com/card/dmc/190/sol-ring">Sol Ring</a>
+                    					<br><a href="https://scryfall.com/card/dmc/190/sol-ring">Sol Ring</a>
 										<br><a href="https://scryfall.com/card/vma/316/strip-mine">Strip Mine</a>
 										<br><a href="https://scryfall.com/card/ulg/45/tinker">Tinker</a>
 										<br><a href="https://scryfall.com/card/cmr/156/vampiric-tutor">Vampiric Tutor</a>
@@ -95,11 +95,11 @@
 										<br><a href="https://scryfall.com/card/8ed/91/merchant-scroll">Merchant Scroll</a>
 										<br><a href="https://scryfall.com/card/ema/62/mystical-tutor">Mystical Tutor</a>
 										<br><a href="https://scryfall.com/card/ema/177/natural-order">Natural Order</a>
-                    <br><a href="https://scryfall.com/card/eld/197/oko-thief-of-crowns">Oko, Thief of Crowns</a>
+                    					<br><a href="https://scryfall.com/card/eld/197/oko-thief-of-crowns">Oko, Thief of Crowns</a>
 										<br><a href="https://scryfall.com/card/2x2/314/senseis-divining-top">Sensei's Divining Top</a>
 										<br><a href="https://scryfall.com/card/cc1/5/sylvan-library">Sylvan Library</a>
 										<br><a href="https://scryfall.com/card/ncc/237/treasure-cruise">Treasure Cruise</a>
-                    <br><a href="https://scryfall.com/card/bbd/136/true-name-nemesis">True-Name Nemesis</a>
+                    					<br><a href="https://scryfall.com/card/bbd/136/true-name-nemesis">True-Name Nemesis</a>
 										<br><a href="https://scryfall.com/card/bok/163/umezawas-jitte">Umezawa's Jitte</a>
 										<br><a href="https://scryfall.com/card/thb/161/underworld-breach">Underworld Breach</a>
 										<br><a href="https://scryfall.com/card/mh2/259/urzas-saga">Urza's Saga</a>
