Adds history of points list continuous to format conception

--- a/pointshistory.html
+++ b/pointshistory.html
@@ -34,6 +34,16 @@
 									<br><b><a href="https://scryfall.com/card/eld/197/oko-thief-of-crowns">Oko, Thief of Crowns</a> +1 (0 to 1)</b>
 									<br><b><a href="https://scryfall.com/card/bbd/136/true-name-nemesis">True-Name Nemesis</a> +1 (0 to 1)</b>
 								</p>
+                <h2>3 December 2022</h2>
+                <p>
+                  <br><b><a href="https://scryfall.com/card/a25/57/flash">Flash</a> +3 (0 to 3)</b>
+                  <br><b><a href="https://scryfall.com/card/thb/73/thassas-oracle">Thassa's Oracle</a> +3 (0 to 3)</b>
+                  <br><b><a href="https://scryfall.com/card/8ed/91/merchant-scroll">Merchant Scroll</a> +1 (0 to 1)</b>
+                </p>
+                <h2>4 October 2022</h2>
+                <p>
+                  Points list initialized.
+                </p>
 							</section>
 
 					</div>
